<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/coordinatorLayout"
        android:background="@color/splash_bg">




    <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">


    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">



        <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical"
           android:gravity="center"
           android:background="@color/white">

            <ImageView
                    android:layout_width="80dp"
                    android:layout_height="96dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/app_logo"
                android:layout_marginBottom="20dp"/>




            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_gravity="center_vertical"
                  android:layout_margin="46dp">


                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                    <EditText
                       android:id="@+id/edtUserName"
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:hint="@string/edt_username_hint"
                       android:imeOptions="actionNext"
                       android:inputType="textEmailAddress"
                       android:singleLine="true"
                      />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                    <EditText
                            android:id="@+id/edtPassword"
                            android:layout_width="match_parent"
                            android:layout_height="42dp"
                            android:hint="@string/password"
                           android:inputType="textPassword"/>

                </com.google.android.material.textfield.TextInputLayout>




                <Button
                   android:id="@+id/btnLogin"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal"
                   android:layout_marginTop="20dp"
                   android:text="@string/btn_login_label"
                  android:background="@color/colorPrimary"
                android:textColor="@color/white"/>


            </LinearLayout>






        </LinearLayout>


        <include
                android:id="@+id/llProgressBar"
                android:visibility="gone"
                layout="@layout/progress_dailog"/>


    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>