<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/coordinatorLayout">




    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <!-- The ActionBar displayed at the top -->
        <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:id="@+id/toolbar"
                android:background="@color/colorPrimary"
                app:subtitleTextColor="@color/white"
                android:gravity="center"
                android:contentInsetEnd="0dp"
                android:contentInsetStart="0dp"
                app:popupTheme="@style/AppTheme.PopupOverlay">

        </androidx.appcompat.widget.Toolbar>

        <!-- The main content view where fragments are loaded -->

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">







            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/app_logo">

                </ImageView>



                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">


                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="32dp"
                            android:orientation="vertical">


                        <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">


                            <EditText
                                    android:id="@+id/edtPatientName"
                                    android:layout_width="match_parent"
                                    android:layout_height="42dp"
                                    android:maxLength="50"
                                    android:hint="@string/edt_patientname"
                                    android:inputType="text"
                                    android:imeOptions="actionNext"
                                    />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">


                            <EditText
                                    android:id="@+id/edt_PatientAge"
                                    android:layout_width="match_parent"
                                    android:layout_height="42dp"
                                    android:hint="@string/edt_age"
                                    android:inputType="number"
                                    android:maxLength="2"
                                    android:imeOptions="actionNext"
                                    />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">


                            <EditText
                                    android:id="@+id/edtMobileno"
                                    android:layout_width="match_parent"
                                    android:layout_height="42dp"
                                    android:hint="@string/edt_mobileno"
                                    android:inputType="number"
                                    android:maxLength="10"
                                    android:imeOptions="actionNext"
                                    />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">


                            <EditText
                                    android:id="@+id/edt_Reason"
                                    android:layout_width="match_parent"
                                    android:layout_height="42dp"
                                    android:hint="@string/edt_reason"
                                    android:inputType="text"
                                    android:imeOptions="actionNext"
                                    />
                        </com.google.android.material.textfield.TextInputLayout>


                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_marginTop="15dp"
                                android:layout_marginLeft="3dp">

                            <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/txt_Datepicker"
                                    android:text="Date :"
                                    />
                            <View
                                    android:layout_width="match_parent"
                                    android:layout_height="1dp"
                                    android:background="@color/black"
                                    android:layout_marginRight="5dp"
                                    android:layout_marginTop="5dp">

                            </View>

                        </LinearLayout>



                        <Button
                                android:id="@+id/btn_Save"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="20dp"
                                android:text="@string/btn_save_patient"
                                android:paddingLeft="20dp"
                                android:paddingRight="20dp"
                                android:drawableLeft="@drawable/ic_add"
                                android:drawablePadding="10dp"
                                android:background="@color/colorPrimary"
                                android:textColor="@color/white"
                                android:elevation="10dp"
                                />



                    </LinearLayout>

                </LinearLayout>


            </FrameLayout>



        </LinearLayout>

    <include
            android:id="@+id/llProgressBar"
            android:visibility="gone"
            layout="@layout/progress_dailog"/>



</androidx.coordinatorlayout.widget.CoordinatorLayout>