<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/coordinatorLayout">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:id="@+id/toolbar"
                    android:background="@color/colorPrimary"
                    app:subtitleTextColor="@color/white"
                    android:gravity="center"
                    android:contentInsetEnd="0dp"
                    android:contentInsetStart="0dp"
                    app:popupTheme="@style/AppTheme.PopupOverlay">

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">



        <androidx.core.widget.NestedScrollView
                android:id="@+id/llnested"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            <LinearLayout
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    >


                <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">



                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="32dp"
                            android:orientation="vertical"
                            android:focusableInTouchMode="true">


                        <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">


                            <EditText
                                    android:id="@+id/edtPatientName"
                                    android:layout_width="match_parent"
                                    android:layout_height="42dp"
                                    android:clickable="false"
                                    android:focusableInTouchMode="false"
                                    android:hint="@string/edt_patientname"

                                    />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:focusableInTouchMode="true">


                            <EditText
                                    android:id="@+id/edt_PatientAge"
                                    android:layout_width="match_parent"
                                    android:layout_height="42dp"
                                    android:hint="@string/edt_age"
                                    android:clickable="false"
                                    android:focusableInTouchMode="false"
                                    />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">


                            <EditText
                                    android:id="@+id/edtMobileno"
                                    android:layout_width="match_parent"
                                    android:layout_height="42dp"
                                    android:hint="@string/edt_mobileno"
                                    android:clickable="false"
                                    android:focusableInTouchMode="false"
                                    />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">


                            <EditText
                                    android:id="@+id/edt_Reason"
                                    android:layout_width="match_parent"
                                    android:layout_height="42dp"
                                    android:hint="@string/edt_reason"
                                    android:clickable="false"
                                    android:focusableInTouchMode="false"
                                    />
                        </com.google.android.material.textfield.TextInputLayout>


                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                            <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/txt_Datepicker"
                                    android:text=" "
                                    android:layout_marginTop="12dp"
                                    android:textColor="@color/colorblack"
                                    android:textSize="16sp"
                                    />


                            <View
                                    android:layout_width="match_parent"
                                    android:layout_height="1dp"
                                    android:background="@color/black"
                                    />

                        </LinearLayout>


                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:orientation="horizontal">


                              <TextView
                                      android:layout_width="0dip"
                                      android:layout_height="wrap_content"
                                      android:layout_weight="80"
                                      android:text="Blood Test"
                                      android:gravity="center_vertical"
                                      android:textSize="16sp"
                                      android:textColor="@color/black"
                                      android:layout_gravity="center_vertical">

                              </TextView>


                               <Switch
                                       android:id="@+id/switchBloodTest"
                                       android:layout_width="0dip"
                                       android:layout_height="wrap_content"
                                       android:layout_weight="20"
                                       android:layout_gravity="end"
                                       android:text="">

                               </Switch>


                        </LinearLayout>


                        <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/labTypeInput"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:visibility="gone">


                            <EditText
                                    android:id="@+id/edt_LabType"
                                    android:layout_width="match_parent"
                                    android:layout_height="42dp"
                                    android:hint="@string/edt_lab_test"
                                    android:inputType="text"
                                    android:imeOptions="actionDone"/>
                        </com.google.android.material.textfield.TextInputLayout>



                        <LinearLayout
                                android:visibility="gone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:background="@drawable/edt_background">


                            <com.google.android.material.textfield.TextInputLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content">


                                <EditText
                                        android:id="@+id/edt_Precription"
                                        android:layout_width="match_parent"
                                        android:layout_height="98dp"
                                        android:hint="@string/edt_reason"
                                        android:background="@null"
                                        />
                            </com.google.android.material.textfield.TextInputLayout>

                        </LinearLayout>



                    </LinearLayout>


                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            >


                        <androidx.cardview.widget.CardView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">


                            <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">


                                <!--                                  medicine header-->
                                <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="38dp"
                                        android:background="@color/gray"
                                        android:orientation="horizontal">


                                    <TextView
                                            android:layout_width="0dip"
                                            android:layout_height="match_parent"
                                            android:layout_weight="85"
                                            android:text="Medicines"
                                            android:gravity="center"
                                            android:textAllCaps="true"
                                            android:textSize="16sp"
                                            android:textColor="@color/colorAccent"/>



                                    <LinearLayout
                                            android:id="@+id/llAddMedicine"
                                            android:layout_width="0dip"
                                            android:layout_height="match_parent"
                                            android:layout_weight="15"
                                            android:gravity="center"
                                            >

                                        <ImageView
                                                android:layout_width="24dp"
                                                android:layout_height="24dp"
                                                android:src="@drawable/ic_add_medicine"
                                                android:layout_gravity="center">

                                        </ImageView>

                                    </LinearLayout>


                                </LinearLayout>


                                <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:orientation="vertical">


                                    <androidx.recyclerview.widget.RecyclerView
                                            android:id="@+id/medicineRecyclerView"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content">

                                    </androidx.recyclerview.widget.RecyclerView>




                                </LinearLayout>





                            </LinearLayout>






                        </androidx.cardview.widget.CardView>












                    </LinearLayout>



                    <Button
                            android:id="@+id/btn_Save"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="20dp"
                            android:paddingLeft="20dp"
                            android:paddingRight="20dp"
                            android:drawablePadding="10dp"
                            android:drawableLeft="@drawable/ic_add"
                            android:text="@string/btn_save_patient"
                            android:background="@color/colorPrimary"
                            android:textColor="@color/white"/>



                </LinearLayout>








            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


            <include
                    android:id="@+id/llProgressBar"
                    android:visibility="gone"
                    layout="@layout/progress_dailog"/>


        </LinearLayout>


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>